# modern_CV_1.2

./: pyproject.toml  readme.md  train.py
notebooks/: attention_analysis.ipynb
src/: attention_analysis.py
